# OS2-HU

./: README.md
aufgabe1/: TODO.txt
aufgabe1/spsc/: Cargo.toml  benchmark.txt
aufgabe1/spsc/src/: main.rs  test.rs
